@@ -1,4 +1,5 @@
 AC_INIT(configure.ac)
+AC_PREREQ(2.59)
 AM_INIT_AUTOMAKE(pam_krb5,`rpm -q --specfile ${srcdir:-.}/pam_krb5.spec --qf '%{version}\n' | head -n1`)
 AC_PROG_CC
 AC_DISABLE_STATIC
